--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseurl = "http://yourSiteHere"
+baseurl = "http://kchansen.github.io/aviationprofile"
 languageCode = "en-us"
-title = "my new hugo site"
+title = "AviationProfile.me"
